versions/v2.10/modules/en/pages/cluster-admin/project-admin/add-users-to-projects.adoc
= Adding Users to Projects
:page-languages: [en, zh]
:revdate: 2025-05-15
:page-revdate: {revdate}
:community-path: how-to-guides/new-user-guides/add-users-to-projects.adoc 
:product-path: cluster-admin/project-admin/add-users-to-projects.adoc
:experimental:
ifeval::["{build-type}" != "community"]
:xref-cluster-project-roles: xref:rancher-admin/users/authn-and-authz/manage-role-based-access-control-rbac/cluster-and-project-roles.adoc
:xref-projects-and-namespaces: xref:cluster-admin/manage-clusters/projects-and-namespaces.adoc
:xref-custom-roles: xref:rancher-admin/users/authn-and-authz/manage-role-based-access-control-rbac/custom-roles.adoc
:xref-locked-roles: xref:rancher-admin/users/authn-and-authz/manage-role-based-access-control-rbac/locked-roles.adoc
endif::[]
ifeval::["{build-type}" == "community"]
:xref-cluster-project-roles: xref:how-to-guides/new-user-guides/authentication-permissions-and-global-configuration/manage-role-based-access-control-rbac/cluster-and-project-roles.adoc
:xref-projects-and-namespaces: xref:how-to-guides/new-user-guides/manage-clusters/projects-and-namespaces.adoc
:xref-custom-roles: xref:how-to-guides/new-user-guides/authentication-permissions-and-global-configuration/manage-role-based-access-control-rbac/custom-roles.adoc
:xref-locked-roles: xref:how-to-guides/new-user-guides/authentication-permissions-and-global-configuration/manage-role-based-access-control-rbac/locked-roles.adoc
endif::[]

If you want to provide a user with access and permissions to _specific_ projects and resources within a cluster, assign the user a project membership.

You can add members to a project as it is created, or add them to an existing project.

[TIP]
====

Want to provide a user with access to _all_ projects within a cluster? See {xref-cluster-project-roles}[Adding Cluster Members] instead.
====


== Adding Members to a New Project

You can add members to a project as you create it (recommended if possible). For details on creating a new project, refer to the {xref-projects-and-namespaces}[cluster administration section.]

== Adding Members to an Existing Project

Following project creation, you can add users as project members so that they can access its resources.

. In the upper left corner, click *☰ > Cluster Management*.
. On the *Clusters* page, go to the cluster where you want to add members to a project and click *Explore*.
. Click menu:Cluster[Projects/Namespaces].
. Go to the project where you want to add members. Next to the *Create Namespace* button above the project name, click *☰*. Select *Edit Config*.
. In the *Members* tab, click *Add*.
. Search for the user or group that you want to add to the project.
+
[NOTE]
.Notes
====
* At least 2 characters must be typed in the search box for results to appear.
* Users can be searched based on their username or display name.
* Search is prefix-based (e.g., a user named `Stan Dard` will appear when searching for `Sta`, but not when searching for `Dar`) and case-sensitive.
====
+
If external authentication is configured:

 ** Rancher returns users from your external authentication source as you type.
 ** A drop-down allows you to add groups instead of individual users. The dropdown only lists groups that you, the logged in user, are included in.

+

[NOTE]
====
If you are logged in as a local user, external users do not display in your search results.
====


. Assign the user or group *Project* roles.
+
{xref-cluster-project-roles}[What are Project Roles?]
+

[NOTE]
.Notes:
====

 ** Users assigned the `Owner` or `Member` role for a project automatically inherit the `namespace creation` role. However, this role is a https://kubernetes.io/docs/reference/access-authn-authz/rbac/#role-and-clusterrole[Kubernetes ClusterRole], meaning its scope extends to all projects in the cluster. Therefore, users explicitly assigned the `Owner` or `Member` role for a project can create or delete namespaces in other projects they're assigned to, even with only the `Read Only` role assigned.
 ** By default, the Rancher role of `project-member` inherits from the `Kubernetes-edit` role, and the `project-owner` role inherits from the `Kubernetes-admin` role. As such, both `project-member` and `project-owner` roles will allow for namespace management, including the ability to create and delete namespaces.
 ** For `Custom` roles, you can modify the list of individual roles available for assignment.
  *** To add roles to the list, {xref-custom-roles}[Add a Custom Role].
  *** To remove roles from the list, {xref-locked-roles}[Lock/Unlock Roles].

+
====


*Result:* The chosen users are added to the project.

* To revoke project membership, select the user and click *Delete*. This action deletes membership, not the user.
* To modify a user's roles in the project, delete them from the project, and then re-add them with modified roles.
